# fcn_segmentation

./: .gitignore  CMakeLists.txt  ReadMe.md  package.xml
include/fcn_segmentation/: fcn_segmentation.hpp
launch/: fcn_segmentation_launch.py  fcn_segmentation_rviz_launch.py
param/: fcn_segmentation.yaml
params/: fcn_segmentation.yaml
rviz/: fcn_segmentation.rviz
script/: export_fcn_to_onnx.py
src/: fcn_segmentation.cpp  fcn_segmentation_node.cpp
